generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);