generated-out/docking/dear-imgui-raw-docking-internal/src/DearImGui/Raw/Internal.hsc


-- C: void ImFontAtlasAddDrawListSharedData(ImFontAtlas* atlas, ImDrawListSharedData* data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasAddDrawListSharedData"
  cImFontAtlasAddDrawListSharedData :: (Ptr ImFontAtlas) -> (Ptr ImDrawListSharedData) -> IO ()
-- C: ImFontBaked* ImFontAtlasBakedAdd(ImFontAtlas* atlas, ImFont* font, float font_size, float font_rasterizer_density, ImGuiID baked_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBakedAdd"
  cImFontAtlasBakedAdd :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> CFloat -> CFloat -> ImGuiID -> IO (Ptr ImFontBaked)
-- C: ImFontGlyph* ImFontAtlasBakedAddFontGlyph(ImFontAtlas* atlas, ImFontBaked* baked, ImFontConfig* src, const ImFontGlyph* in_glyph)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBakedAddFontGlyph"
  cImFontAtlasBakedAddFontGlyph :: (Ptr ImFontAtlas) -> (Ptr ImFontBaked) -> (Ptr ImFontConfig) -> (Ptr ImFontGlyph) -> IO (Ptr ImFontGlyph)
-- C: void ImFontAtlasBakedAddFontGlyphAdvancedX(ImFontAtlas* atlas, ImFontBaked* baked, ImFontConfig* src, ImWchar codepoint, float advance_x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBakedAddFontGlyphAdvancedX"
  cImFontAtlasBakedAddFontGlyphAdvancedX :: (Ptr ImFontAtlas) -> (Ptr ImFontBaked) -> (Ptr ImFontConfig) -> ImWchar -> CFloat -> IO ()
-- C: void ImFontAtlasBakedDiscard(ImFontAtlas* atlas, ImFont* font, ImFontBaked* baked)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBakedDiscard"
  cImFontAtlasBakedDiscard :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> (Ptr ImFontBaked) -> IO ()
-- C: void ImFontAtlasBakedDiscardFontGlyph(ImFontAtlas* atlas, ImFont* font, ImFontBaked* baked, ImFontGlyph* glyph)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBakedDiscardFontGlyph"
  cImFontAtlasBakedDiscardFontGlyph :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> (Ptr ImFontBaked) -> (Ptr ImFontGlyph) -> IO ()
-- C: ImFontBaked* ImFontAtlasBakedGetClosestMatch(ImFontAtlas* atlas, ImFont* font, float font_size, float font_rasterizer_density)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBakedGetClosestMatch"
  cImFontAtlasBakedGetClosestMatch :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> CFloat -> CFloat -> IO (Ptr ImFontBaked)
-- C: ImGuiID ImFontAtlasBakedGetId(ImGuiID font_id, float baked_size, float rasterizer_density)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBakedGetId"
  cImFontAtlasBakedGetId :: ImGuiID -> CFloat -> CFloat -> IO ImGuiID
-- C: ImFontBaked* ImFontAtlasBakedGetOrAdd(ImFontAtlas* atlas, ImFont* font, float font_size, float font_rasterizer_density)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBakedGetOrAdd"
  cImFontAtlasBakedGetOrAdd :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> CFloat -> CFloat -> IO (Ptr ImFontBaked)
-- C: void ImFontAtlasBakedSetFontGlyphBitmap(ImFontAtlas* atlas, ImFontBaked* baked, ImFontConfig* src, ImFontGlyph* glyph, ImTextureRect* r, const unsigned char* src_pixels, ImTextureFormat src_fmt, int src_pitch)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBakedSetFontGlyphBitmap"
  cImFontAtlasBakedSetFontGlyphBitmap :: (Ptr ImFontAtlas) -> (Ptr ImFontBaked) -> (Ptr ImFontConfig) -> (Ptr ImFontGlyph) -> (Ptr ImTextureRect) -> (Ptr CUChar) -> ImTextureFormat -> CInt -> IO ()
-- C: void ImFontAtlasBuildClear(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildClear"
  cImFontAtlasBuildClear :: (Ptr ImFontAtlas) -> IO ()
-- C: void ImFontAtlasBuildDestroy(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildDestroy"
  cImFontAtlasBuildDestroy :: (Ptr ImFontAtlas) -> IO ()
-- C: void ImFontAtlasBuildDiscardBakes(ImFontAtlas* atlas, int unused_frames)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildDiscardBakes"
  cImFontAtlasBuildDiscardBakes :: (Ptr ImFontAtlas) -> CInt -> IO ()
-- C: void ImFontAtlasBuildGetOversampleFactors(ImFontConfig* src, ImFontBaked* baked, int* out_oversample_h, int* out_oversample_v)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildGetOversampleFactors"
  cImFontAtlasBuildGetOversampleFactors :: (Ptr ImFontConfig) -> (Ptr ImFontBaked) -> (Ptr CInt) -> (Ptr CInt) -> IO ()
-- C: void ImFontAtlasBuildInit(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildInit"
  cImFontAtlasBuildInit :: (Ptr ImFontAtlas) -> IO ()
-- C: void ImFontAtlasBuildLegacyPreloadAllGlyphRanges(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildLegacyPreloadAllGlyphRanges"
  cImFontAtlasBuildLegacyPreloadAllGlyphRanges :: (Ptr ImFontAtlas) -> IO ()
-- C: void ImFontAtlasBuildMain(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildMain"
  cImFontAtlasBuildMain :: (Ptr ImFontAtlas) -> IO ()
-- C: void ImFontAtlasBuildNotifySetFont(ImFontAtlas* atlas, ImFont* old_font, ImFont* new_font)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildNotifySetFont"
  cImFontAtlasBuildNotifySetFont :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> (Ptr ImFont) -> IO ()
-- C: void ImFontAtlasBuildRenderBitmapFromString(ImFontAtlas* atlas, int x, int y, int w, int h, const char* in_str, char in_marker_char)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildRenderBitmapFromString"
  cImFontAtlasBuildRenderBitmapFromString :: (Ptr ImFontAtlas) -> CInt -> CInt -> CInt -> CInt -> CString -> CChar -> IO ()
-- C: void ImFontAtlasBuildSetupFontLoader(ImFontAtlas* atlas, const ImFontLoader* font_loader)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildSetupFontLoader"
  cImFontAtlasBuildSetupFontLoader :: (Ptr ImFontAtlas) -> (Ptr ImFontLoader) -> IO ()
-- C: void ImFontAtlasBuildSetupFontSpecialGlyphs(ImFontAtlas* atlas, ImFont* font, ImFontConfig* src)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildSetupFontSpecialGlyphs"
  cImFontAtlasBuildSetupFontSpecialGlyphs :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> (Ptr ImFontConfig) -> IO ()
-- C: void ImFontAtlasBuildUpdatePointers(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasBuildUpdatePointers"
  cImFontAtlasBuildUpdatePointers :: (Ptr ImFontAtlas) -> IO ()
-- C: void ImFontAtlasDebugLogTextureRequests(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasDebugLogTextureRequests"
  cImFontAtlasDebugLogTextureRequests :: (Ptr ImFontAtlas) -> IO ()
-- C: void ImFontAtlasFontDestroyOutput(ImFontAtlas* atlas, ImFont* font)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasFontDestroyOutput"
  cImFontAtlasFontDestroyOutput :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> IO ()
-- C: void ImFontAtlasFontDestroySourceData(ImFontAtlas* atlas, ImFontConfig* src)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasFontDestroySourceData"
  cImFontAtlasFontDestroySourceData :: (Ptr ImFontAtlas) -> (Ptr ImFontConfig) -> IO ()
-- C: void ImFontAtlasFontDiscardBakes(ImFontAtlas* atlas, ImFont* font, int unused_frames)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasFontDiscardBakes"
  cImFontAtlasFontDiscardBakes :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> CInt -> IO ()
-- C: bool ImFontAtlasFontInitOutput(ImFontAtlas* atlas, ImFont* font)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasFontInitOutput"
  cImFontAtlasFontInitOutput :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> IO CBool
-- C: void ImFontAtlasFontRebuildOutput(ImFontAtlas* atlas, ImFont* font)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasFontRebuildOutput"
  cImFontAtlasFontRebuildOutput :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> IO ()
-- C: void ImFontAtlasFontSourceAddToFont(ImFontAtlas* atlas, ImFont* font, ImFontConfig* src)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasFontSourceAddToFont"
  cImFontAtlasFontSourceAddToFont :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> (Ptr ImFontConfig) -> IO ()
-- C: bool ImFontAtlasFontSourceInit(ImFontAtlas* atlas, ImFontConfig* src)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasFontSourceInit"
  cImFontAtlasFontSourceInit :: (Ptr ImFontAtlas) -> (Ptr ImFontConfig) -> IO CBool
-- C: bool ImFontAtlasGetMouseCursorTexData(ImFontAtlas* atlas, ImGuiMouseCursor cursor_type, ImVec2* out_offset, ImVec2* out_size, ImVec2[2] out_uv_border, ImVec2[2] out_uv_fill)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasGetMouseCursorTexData"
  cImFontAtlasGetMouseCursorTexData :: (Ptr ImFontAtlas) -> ImGuiMouseCursor -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO CBool
-- C: ImFontAtlasRectId ImFontAtlasPackAddRect(ImFontAtlas* atlas, int w, int h, ImFontAtlasRectEntry* overwrite_entry)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasPackAddRect"
  cImFontAtlasPackAddRect :: (Ptr ImFontAtlas) -> CInt -> CInt -> (Ptr ImFontAtlasRectEntry) -> IO ImFontAtlasRectId
-- C: void ImFontAtlasPackDiscardRect(ImFontAtlas* atlas, ImFontAtlasRectId id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasPackDiscardRect"
  cImFontAtlasPackDiscardRect :: (Ptr ImFontAtlas) -> ImFontAtlasRectId -> IO ()
-- C: ImTextureRect* ImFontAtlasPackGetRect(ImFontAtlas* atlas, ImFontAtlasRectId id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasPackGetRect"
  cImFontAtlasPackGetRect :: (Ptr ImFontAtlas) -> ImFontAtlasRectId -> IO (Ptr ImTextureRect)
-- C: ImTextureRect* ImFontAtlasPackGetRectSafe(ImFontAtlas* atlas, ImFontAtlasRectId id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasPackGetRectSafe"
  cImFontAtlasPackGetRectSafe :: (Ptr ImFontAtlas) -> ImFontAtlasRectId -> IO (Ptr ImTextureRect)
-- C: void ImFontAtlasPackInit(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasPackInit"
  cImFontAtlasPackInit :: (Ptr ImFontAtlas) -> IO ()
-- C: unsigned int ImFontAtlasRectId_GetGeneration(ImFontAtlasRectId id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasRectId_GetGeneration"
  cImFontAtlasRectId_GetGeneration :: ImFontAtlasRectId -> IO CUInt
-- C: int ImFontAtlasRectId_GetIndex(ImFontAtlasRectId id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasRectId_GetIndex"
  cImFontAtlasRectId_GetIndex :: ImFontAtlasRectId -> IO CInt
-- C: ImFontAtlasRectId ImFontAtlasRectId_Make(int index_idx, int gen_idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasRectId_Make"
  cImFontAtlasRectId_Make :: CInt -> CInt -> IO ImFontAtlasRectId
-- C: void ImFontAtlasRemoveDrawListSharedData(ImFontAtlas* atlas, ImDrawListSharedData* data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasRemoveDrawListSharedData"
  cImFontAtlasRemoveDrawListSharedData :: (Ptr ImFontAtlas) -> (Ptr ImDrawListSharedData) -> IO ()
-- C: ImTextureData* ImFontAtlasTextureAdd(ImFontAtlas* atlas, int w, int h)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureAdd"
  cImFontAtlasTextureAdd :: (Ptr ImFontAtlas) -> CInt -> CInt -> IO (Ptr ImTextureData)
